--- a/src/styles/math-quiz.css
+++ b/src/styles/math-quiz.css
@@ -1,5 +1,26 @@
 /* math-quiz.css - Retro pastel calculator design */
 
+/* DSEG14 - Classic 7-segment LCD display font */
+@font-face {
+  font-family: "DSEG14";
+  src:
+    url("/fonts/dseg/DSEG14Classic-Regular.woff2") format("woff2"),
+    url("/fonts/dseg/DSEG14Classic-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "DSEG14";
+  src:
+    url("/fonts/dseg/DSEG14Classic-Bold.woff2") format("woff2"),
+    url("/fonts/dseg/DSEG14Classic-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 #quiz-container {
   margin: 2em 0;
   max-width: 400px;
@@ -165,6 +186,8 @@
   min-height: 1.2em;
   line-height: 1.2em;
   font-weight: 700;
+  font-family: "DSEG14", "Courier New", monospace;
+  letter-spacing: 0.05em;
 }
 
 [data-theme-dark] #progress {
@@ -185,7 +208,7 @@
 }
 
 #answer-input {
-  font-size: 1.4em;
+  font-size: 1.6em;
   font-weight: 700;
   text-align: center;
   min-height: 1.5em;
@@ -195,6 +218,8 @@
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid rgba(58, 74, 58, 0.3);
+  font-family: "DSEG14", "Courier New", monospace;
+  letter-spacing: 0.1em;
 }
 
 [data-theme-dark] #answer-input {
@@ -210,6 +235,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "DSEG14", "Courier New", monospace;
 }
 
 .correct {
