--- a/src/styles/math-quiz.css
+++ b/src/styles/math-quiz.css
@@ -1,21 +1,21 @@
 /* math-quiz.css - Retro pastel calculator design */
 
-/* DSEG14 - Classic 7-segment LCD display font */
+/* DSEG7 - Classic 7-segment LCD display font */
 @font-face {
-  font-family: "DSEG14";
+  font-family: "DSEG7";
   src:
-    url("/fonts/dseg/DSEG14Classic-Regular.woff2") format("woff2"),
-    url("/fonts/dseg/DSEG14Classic-Regular.woff") format("woff");
+    url("/fonts/dseg/DSEG7Classic-Regular.woff2") format("woff2"),
+    url("/fonts/dseg/DSEG7Classic-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "DSEG14";
+  font-family: "DSEG7";
   src:
-    url("/fonts/dseg/DSEG14Classic-Bold.woff2") format("woff2"),
-    url("/fonts/dseg/DSEG14Classic-Bold.woff") format("woff");
+    url("/fonts/dseg/DSEG7Classic-Bold.woff2") format("woff2"),
+    url("/fonts/dseg/DSEG7Classic-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -179,14 +179,34 @@
   color: #a8c8a0;
 }
 
+#display-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 1.2em;
+  line-height: 1.2em;
+  margin-bottom: 0.5em;
+}
+
+#streak {
+  font-size: 0.8em;
+  color: #3a4a3a;
+  text-align: left;
+  font-weight: 700;
+  font-family: "DSEG7", "Courier New", monospace;
+  letter-spacing: 0.05em;
+}
+
+[data-theme-dark] #streak {
+  color: #88a880;
+}
+
 #progress {
   font-size: 0.8em;
   color: #3a4a3a;
   text-align: right;
-  min-height: 1.2em;
-  line-height: 1.2em;
   font-weight: 700;
-  font-family: "DSEG14", "Courier New", monospace;
+  font-family: "DSEG7", "Courier New", monospace;
   letter-spacing: 0.05em;
 }
 
@@ -218,7 +238,7 @@
   align-items: center;
   justify-content: center;
   border-bottom: 2px solid rgba(58, 74, 58, 0.3);
-  font-family: "DSEG14", "Courier New", monospace;
+  font-family: "DSEG7", "Courier New", monospace;
   letter-spacing: 0.1em;
 }
 
@@ -235,7 +255,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "DSEG14", "Courier New", monospace;
+  font-family: "DSEG7", "Courier New", monospace;
 }
 
 .correct {
